# microservice_rs

./: Cargo.toml
schemas/: messages.sql
src/: main.rs  models.rs  schema.rs
