[package]
name = "microservice_rs"
version = "0.1.0"
authors = ["Kazunari Okuda <saori.cube@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1.1.0", features = ["postgres"]}
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
maud = { git = "https://github.com/lfairy/maud" }
postgres = "0.15.1"
serde_derive = "1.0.27"
serde_json = "1.0.9"
url = "1.6.0"
